tidied up predicts processing notebook

--- a/notebooks/predicts_processing.ipynb
+++ b/notebooks/predicts_processing.ipynb
@@ -69,6 +69,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af16e5ea-36ea-4e90-b5ad-e9642e4ec43f",
+   "metadata": {},
+   "source": [
+    "## Metadata description\n",
+    "\n",
+    "**Identifiers**\n",
+    "- `_id`: ?\n",
+    "- `Source_ID`: ID for the Data Source. Unique.\n",
+    "- `Reference`: Reference for the Data Source in the main text.\n",
+    "- `Study_number`: Between 1 and n for n Studies within Data Source. \n",
+    "- `Study_name`: Unique within Source_ID. \n",
+    "- `Block`: Within a Study either: Empty for all Sites / Non-empty for all Sites and at least two different values among Sites.\n",
+    "- `Site_number`: Between 1 and n for n Sites within Study. Unique within Study.\n",
+    "- `Site_name`: Unique within Study. Where requested by data providers, the names of some Sites have been replaced with 'Site ' + Site_number.\n",
+    "- `SS`: Concatenation of Source_ID and Study_number.\n",
+    "- `SSS`: Concatenation of Source_ID, Study_number and Site_number.\n",
+    "- `SSB`: Concatenation of Source_ID, Study_number and Block.\n",
+    "- `SSBS`: Concatenation of Source_ID, Study_number, Block and Site_number.\n",
+    "<br>\n",
+    "\n",
+    "**Geography**\n",
+    "- `Longitude`: Where requested by data providers, the coordinates for some Sites have been removed from the data extract.\n",
+    "- `Latitude`: Where requested by data providers, the coordinates for some Sites have been removed from the data extract.\n",
+    "- `Coordinates_method`: One of: \"Direct from publication / author\" / \"Georeferenced\".\n",
+    "- `Country`: Coordinates matched to a World Borders GIS polygon.\n",
+    "- `Country_distance_metres`: If zero, Site latitude and longitude were within the matching World Borders 0.3 (Thematic Mapping 2008) GIS polygon. If greater than zero, the value is the distance in metres to the nearest WorldBorders GIS polygon.\n",
+    "- `UN_region`: Coordinates matched to a World Borders GIS polygon.\n",
+    "- `UN_subregion`: Coordinates matched to a World Borders GIS polygon.\n",
+    "<br>\n",
+    "\n",
+    "**Biogeography**\n",
+    "- `Realm`: Coordinates matched to an ecoregions GIS polygon.\n",
+    "- `Biome`: Coordinates matched to an ecoregions GIS polygon.\n",
+    "- `Ecoregion`: Coordinates matched to an ecoregions GIS polygon.\n",
+    "- `Ecoregion_distance_metres`: If zero, Site latitude and longitude were within the matching Terrestrial ecoregions of the world (The Nature Conservancy 2009) GIS polygon. If greater than zero, the value is the distance in metres to the nearest ecoregions GIS polygon.\n",
+    "- `Wilderness_area`: Coordinates matched to a high biodiversity wilderness areas (Mittermeier et al. 2003) GIS polygon. Empty if Site did not fall within a wilderness area polygon.\n",
+    "- `Hotspot`: Coordinates matched to a biodiversity hotspots (Conservation International Foundation 2011) GIS polygon. Empty if Site did not fall within a hotspot polygon.\n",
+    "<br>\n",
+    "\n",
+    "**Study scope**\n",
+    "- `Study_common_taxon`: The Kingdom, Phylum, Class, Order, Family, Genus or Species that is common to all taxa within this Study. Empty for Studies that examined taxa in multiple kingdoms.\n",
+    "- `Rank_of_study_common_taxon`: The lowest taxonomic Rank that is common to all taxa within this Study. Empty for Studies that examined taxa in multiple kingdoms.\n",
+    "<br>\n",
+    "\n",
+    "**Sampling approach**\n",
+    "- `Sample_start_earliest`: In the form YYYY-MM-DD. \n",
+    "- `Sample_end_latest`: In the form YYYY-MM-DD. Value greater than or equal to Sample_start_earliest.\n",
+    "- `Sample_midpoint`: Mid-point of Sample_start_earliest and Sample_end_latest. \n",
+    "- `Sample_date_resolution`: One of: day / month / year\n",
+    "- `Sampling_method`\n",
+    "- `Sampling_effort`: In units given in Sampling_effort_unit. Where sampling effort did not vary among sites within a study, we set the Sampling_effort to 1. If present a value greater than zero.\n",
+    "- `Rescaled_sampling_effort`: Sampling effort rescaled to be between 0 and 1 within the Study i.e., Sampling_effort / max(Sampling_effort for this Study). If present a value greater than zero.\n",
+    "- `Sampling_effort_unit`: In units given in Sampling_effort_unit. Where sampling effort did not vary among sites within a study, we set the Sampling_effort to 1.\n",
+    "- `Max_linear_extent_metres`: The maximum linear extent of sampling in metres.\n",
+    "- `Transect_details`: Free text. Where requested by data providers, the transect details of some Sites have been removed from the data extract.\n",
+    "<br>\n",
+    "\n",
+    "**Taxonomy**\n",
+    "- `Taxon`: Matching taxon in the Catalogue of Life 2013 checklist.\n",
+    "- `Taxon_number`: Between 1 and n for n taxa within Study.\n",
+    "- `Taxon_name_entered`: Name of the taxon as provided by the data contributor.\n",
+    "- `Parsed_name`: The result of parsing Taxon_name_entered.\n",
+    "- `Best_guess_binomial`: COL did not recognize all of the Latin binomials that were given to us so we employed the following scheme: The value of the Species column if Rank contains 'Species'. The first two words of the Species column if Rank contains 'Infraspecies'. The first two words of the Parsed_name column if Rank contains neither 'Infraspecies' nor 'Species' and Parsed_name contains two or more words. Empty in other cases.\n",
+    "- `COL_ID`: The ID of Taxon in COL (Catalogue of Life). \n",
+    "- `Kingdom`: From COL.\n",
+    "- `Phylum`: From COL.\n",
+    "- `Class`: From COL.\n",
+    "- `Order`: From COL.\n",
+    "- `Family`: From COL.\n",
+    "- `Genus`: From COL.\n",
+    "- `Species`: From COL.\n",
+    "- `Higher_taxon`: The higher-taxonomic group that this taxon belongs to.\n",
+    "- `Indication`: A free-text description of the higher taxonomic group of this taxon.\n",
+    "- `Name_status`: From COL.\n",
+    "- `Rank`: From COL.\n",
+    "<br>\n",
+    "\n",
+    "**Diversity metrics**\n",
+    "- `Diversity_metric_type`: One of: Abundance / Occurrence / Species richness\"\n",
+    "- `Diversity_metric`\n",
+    "- `Diversity_metric_is_effort_sensitive`\n",
+    "- `Diversity_metric_is_suitable_for_Chao`\n",
+    "- `Diversity_metric_unit`\n",
+    "- `Measurement`: The biodiversity measurement of the Taxon at the Site in the Study, in units of Diversity_metric_unit.\n",
+    "- `Effort_corrected_measurement`: Where Diversity_metric_is_effort_sensitive is TRUE, the biodiversity measurement corrected for sampling effort (i.e., Measurement / Rescaled_sampling_effort). Where Diversity_metric_is_effort_sensitive is FALSE, the same value as Measurement.\n",
+    "\n",
+    "**Habitat / land use**\n",
+    "- `Predominant_land_use`: One of: Primary vegetation / Young secondary vegetation / Intermediate secondary vegetation / Mature secondary vegetation / Secondary vegetation (indeterminate age) / Plantation forest / Pasture / Cropland / Urban / Cannot decide.\n",
+    "- `Source_for_predominant_land_use`: One of: Direct from publication or author / Google maps. May be empty for data collated before this information was captured\n",
+    "- `Use_intensity`: One of: Minimal use / Light use / Intense use / Cannot decide.\n",
+    "- `Habitat_as_described`: Free text description of habitat. Where requested by data providers, the habitat descriptions of some Sites have been removed from the data extract.\n",
+    "- `Habitat_patch_area_square_metres`: Habitat_patch_area expressed in square metres.\n",
+    "- `Km_to_nearest_edge_of_habitat`: Distance in km to the nearest edge of habitat supporting high diversity. A negative value indicates that the Site was within the high-diversity habitat\n",
+    "- `Years_since_fragmentation_or_conversion`: Years since fragmentation or conversion to present land cover (Primary habitat) or since start of recovery (Secondary habitat)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c3fb3b1e-a6eb-4409-b207-cbc7a4a6e176",
    "metadata": {},
    "source": [
@@ -1008,22 +1106,6 @@
     "# Save as shapefile\n",
     "gdf_sites.to_file(\"../../data/PREDICTS/site_coord.shp\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b89e5d7-9497-49d8-88e9-eceb1e026c42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32cbb468-4e16-42a4-bd49-eda2598645d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
