final changes before merge

--- a/notebooks/predicts_data_exploration.ipynb
+++ b/notebooks/predicts_data_exploration.ipynb
@@ -3745,6 +3745,148 @@
     "plt.title(\"Number of sites sampled per year\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "id": "89dc789e-e1dc-496e-a2fe-d1d627857fba",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (3, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Diversity_metric_unit</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;percentage&quot;</td></tr><tr><td>&quot;individuals&quot;</td></tr><tr><td>&quot;presence/absen…</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (3, 1)\n",
+       "┌───────────────────────┐\n",
+       "│ Diversity_metric_unit │\n",
+       "│ ---                   │\n",
+       "│ str                   │\n",
+       "╞═══════════════════════╡\n",
+       "│ percentage            │\n",
+       "│ individuals           │\n",
+       "│ presence/absence      │\n",
+       "└───────────────────────┘"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predicts.filter(pl.col(\"Source_ID\") == \"YY1_2015__Mandle\").select(\n",
+    "    \"Diversity_metric_unit\"\n",
+    ").unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "id": "2542f2c9-62af-4965-9ce4-d506a55e98a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Sampling_method</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;fixed plots/qu…</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 1)\n",
+       "┌──────────────────────┐\n",
+       "│ Sampling_method      │\n",
+       "│ ---                  │\n",
+       "│ str                  │\n",
+       "╞══════════════════════╡\n",
+       "│ fixed plots/quadrats │\n",
+       "└──────────────────────┘"
+      ]
+     },
+     "execution_count": 347,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predicts.filter(pl.col(\"Source_ID\") == \"YY1_2015__Mandle\").select(\n",
+    "    \"Sampling_method\"\n",
+    ").unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "id": "7595e22a-b9d4-4195-9fb9-971bcd3a7518",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mandle = (\n",
+    "    df_predicts.filter(pl.col(\"Source_ID\") == \"YY1_2015__Mandle\")\n",
+    "    .group_by(\"SS\")\n",
+    "    .agg(pl.col(\"Taxon_name_entered\").unique())\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "id": "5e8df725-31fe-4829-97da-6afa3b32fd2d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Taxon_name_entered</th></tr><tr><td>list[str]</td></tr></thead><tbody><tr><td>[&quot;Diospyros montana&quot;, &quot;Bridelia retusa&quot;, … &quot;Wendlandia thyrsoidea&quot;]</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 1)\n",
+       "┌───────────────────────────────────┐\n",
+       "│ Taxon_name_entered                │\n",
+       "│ ---                               │\n",
+       "│ list[str]                         │\n",
+       "╞═══════════════════════════════════╡\n",
+       "│ [\"Diospyros montana\", \"Bridelia … │\n",
+       "└───────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mandle.select(\"Taxon_name_entered\")[0]"
+   ]
   }
  ],
  "metadata": {
