--- a/notebooks/predicts_processing.ipynb
+++ b/notebooks/predicts_processing.ipynb
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "433f229f-e99f-4c0b-a89b-2ea8e3d35458",
    "metadata": {
     "tags": []
@@ -1066,7 +1066,7 @@
    "outputs": [],
    "source": [
     "# Save the merged dataframe as a csv file\n",
-    "df_predicts.to_csv(\"../../data/PREDICTS/merged_data.csv\")"
+    "df_predicts.to_csv(\"../../data/PREDICTS/merged_data.csv\", index=False)"
    ]
   },
   {
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "290e385d-9dbe-4415-86f3-e0da99d8448d",
    "metadata": {
     "tags": []
