UN region added to site coordinate file

--- a/notebooks/predicts_processing.ipynb
+++ b/notebooks/predicts_processing.ipynb
@@ -196,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_91819/2598404666.py:2: DtypeWarning: Columns (3,22,62,66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_78408/2598404666.py:2: DtypeWarning: Columns (3,22,62,66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_predicts_orig = pd.read_csv(\"../../data/PREDICTS/PREDICTS_2016/data.csv\")\n"
      ]
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4e7b4bcf-ad47-4359-b746-a826273a8987",
    "metadata": {
     "tags": []
@@ -220,7 +220,7 @@
        "(3278056, 68)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "61e88ec4-2d20-46f0-b0e0-3afcbdcf49f5",
    "metadata": {
     "tags": []
@@ -258,7 +258,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_91819/1272704116.py:2: DtypeWarning: Columns (3,20,23,50,66,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/pd/qpp_vpcn3wv209_68c5q1_r80000gn/T/ipykernel_78408/1272704116.py:2: DtypeWarning: Columns (3,20,23,50,66,70) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_predicts_new = pd.read_csv(\"../../data/PREDICTS/PREDICTS_2022/data.csv\")\n"
      ]
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "75df9041-2a71-4651-bf54-448e8af2734e",
    "metadata": {
     "tags": []
@@ -282,7 +282,7 @@
        "(1040752, 72)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
      "output_type": "stream",
      "text": [
       "[]\n",
-      "['Max_linear_extent', 'Source_for_predominant_habitat', 'Predominant_habitat', 'Eco_region_distance_metres']\n"
+      "['Source_for_predominant_habitat', 'Predominant_habitat', 'Eco_region_distance_metres', 'Max_linear_extent']\n"
      ]
     }
    ],
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "433f229f-e99f-4c0b-a89b-2ea8e3d35458",
    "metadata": {
     "tags": []
@@ -1079,16 +1079,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "290e385d-9dbe-4415-86f3-e0da99d8448d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Get the coordinates for each site\n",
+    "# Get the coordinates for each unique site\n",
     "df_site_long_lat = pd.DataFrame(\n",
-    "    df_predicts.groupby(\"SSS\")[[\"Longitude\", \"Latitude\"]].min()\n",
+    "    df_predicts.groupby(\"SSBS\")[[\"Longitude\", \"Latitude\"]].min()\n",
     ").reset_index()\n",
     "\n",
     "# Generate coordinate tuples from dataframe\n",
@@ -1099,12 +1099,148 @@
     "# Create point geometries\n",
     "geometry = [Point(x, y) for x, y in coordinates]\n",
     "\n",
-    "# Create a geodataframe\n",
-    "gdf_sites = geopd.GeoDataFrame({\"SSS\": df_site_long_lat[\"SSS\"], \"geometry\": geometry})\n",
+    "# Create a geodataframe containing site id and coordinates\n",
+    "gdf_sites = geopd.GeoDataFrame({\"SSBS\": df_site_long_lat[\"SSBS\"], \"geometry\": geometry})\n",
     "gdf_sites.crs = \"EPSG:4326\"\n",
+    "\n",
+    "# Add the UN region to enable filtering later\n",
+    "df_site_region = df_predicts[[\"SSBS\", \"UN_region\"]].groupby(\"SSBS\")[\"UN_region\"].min()\n",
+    "gdf_sites = gdf_sites.join(df_site_region, on=\"SSBS\", how=\"left\", validate=\"1:1\")\n",
     "\n",
     "# Save as shapefile\n",
     "gdf_sites.to_file(\"../../data/PREDICTS/site_coord.shp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f1b9fcdc-8ac5-4608-a046-cf1eedc88456",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SSBS</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>UN_region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AD1_2001__Liow 1  1</td>\n",
+       "      <td>POINT (103.77861 1.35194)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AD1_2001__Liow 1  2</td>\n",
+       "      <td>POINT (103.80806 1.35472)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AD1_2001__Liow 1  3</td>\n",
+       "      <td>POINT (103.81167 1.39472)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AD1_2001__Liow 1  4</td>\n",
+       "      <td>POINT (103.78722 1.32694)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AD1_2001__Liow 1  5</td>\n",
+       "      <td>POINT (103.80361 1.28278)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35731</th>\n",
+       "      <td>YY1_2018__Guillemot 1  66</td>\n",
+       "      <td>POINT (75.48022 12.19213)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35732</th>\n",
+       "      <td>YY1_2018__Guillemot 1  67</td>\n",
+       "      <td>POINT (75.48012 12.21315)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35733</th>\n",
+       "      <td>YY1_2018__Guillemot 1  7</td>\n",
+       "      <td>POINT (75.52462 12.26442)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35734</th>\n",
+       "      <td>YY1_2018__Guillemot 1  8</td>\n",
+       "      <td>POINT (75.52417 12.26392)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35735</th>\n",
+       "      <td>YY1_2018__Guillemot 1  9</td>\n",
+       "      <td>POINT (75.52428 12.26368)</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35736 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            SSBS                   geometry UN_region\n",
+       "0            AD1_2001__Liow 1  1  POINT (103.77861 1.35194)      Asia\n",
+       "1            AD1_2001__Liow 1  2  POINT (103.80806 1.35472)      Asia\n",
+       "2            AD1_2001__Liow 1  3  POINT (103.81167 1.39472)      Asia\n",
+       "3            AD1_2001__Liow 1  4  POINT (103.78722 1.32694)      Asia\n",
+       "4            AD1_2001__Liow 1  5  POINT (103.80361 1.28278)      Asia\n",
+       "...                          ...                        ...       ...\n",
+       "35731  YY1_2018__Guillemot 1  66  POINT (75.48022 12.19213)      Asia\n",
+       "35732  YY1_2018__Guillemot 1  67  POINT (75.48012 12.21315)      Asia\n",
+       "35733   YY1_2018__Guillemot 1  7  POINT (75.52462 12.26442)      Asia\n",
+       "35734   YY1_2018__Guillemot 1  8  POINT (75.52417 12.26392)      Asia\n",
+       "35735   YY1_2018__Guillemot 1  9  POINT (75.52428 12.26368)      Asia\n",
+       "\n",
+       "[35736 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_sites"
    ]
   }
  ],
