--- a/notebooks/predicts_processing.ipynb
+++ b/notebooks/predicts_processing.ipynb
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "290e385d-9dbe-4415-86f3-e0da99d8448d",
    "metadata": {
     "tags": []
@@ -1108,12 +1108,12 @@
     "gdf_sites = gdf_sites.join(df_site_region, on=\"SSBS\", how=\"left\", validate=\"1:1\")\n",
     "\n",
     "# Save as shapefile\n",
-    "gdf_sites.to_file(\"../../data/PREDICTS/site_coord.shp\")"
+    "gdf_sites.to_file(\"../../data/PREDICTS/site_coordinates/site_coord.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "f1b9fcdc-8ac5-4608-a046-cf1eedc88456",
    "metadata": {
     "tags": []
@@ -1177,70 +1177,60 @@
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35731</th>\n",
-       "      <td>YY1_2018__Guillemot 1  66</td>\n",
-       "      <td>POINT (75.48022 12.19213)</td>\n",
+       "      <th>5</th>\n",
+       "      <td>AD1_2001__Liow 2  1</td>\n",
+       "      <td>POINT (103.77861 1.35194)</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35732</th>\n",
-       "      <td>YY1_2018__Guillemot 1  67</td>\n",
-       "      <td>POINT (75.48012 12.21315)</td>\n",
+       "      <th>6</th>\n",
+       "      <td>AD1_2001__Liow 2  2</td>\n",
+       "      <td>POINT (103.80806 1.35472)</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35733</th>\n",
-       "      <td>YY1_2018__Guillemot 1  7</td>\n",
-       "      <td>POINT (75.52462 12.26442)</td>\n",
+       "      <th>7</th>\n",
+       "      <td>AD1_2001__Liow 2  3</td>\n",
+       "      <td>POINT (103.81167 1.39472)</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35734</th>\n",
-       "      <td>YY1_2018__Guillemot 1  8</td>\n",
-       "      <td>POINT (75.52417 12.26392)</td>\n",
+       "      <th>8</th>\n",
+       "      <td>AD1_2001__Liow 2  4</td>\n",
+       "      <td>POINT (103.78722 1.32694)</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35735</th>\n",
-       "      <td>YY1_2018__Guillemot 1  9</td>\n",
-       "      <td>POINT (75.52428 12.26368)</td>\n",
+       "      <th>9</th>\n",
+       "      <td>AD1_2001__Liow 2  5</td>\n",
+       "      <td>POINT (103.80361 1.28278)</td>\n",
        "      <td>Asia</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>35736 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            SSBS                   geometry UN_region\n",
-       "0            AD1_2001__Liow 1  1  POINT (103.77861 1.35194)      Asia\n",
-       "1            AD1_2001__Liow 1  2  POINT (103.80806 1.35472)      Asia\n",
-       "2            AD1_2001__Liow 1  3  POINT (103.81167 1.39472)      Asia\n",
-       "3            AD1_2001__Liow 1  4  POINT (103.78722 1.32694)      Asia\n",
-       "4            AD1_2001__Liow 1  5  POINT (103.80361 1.28278)      Asia\n",
-       "...                          ...                        ...       ...\n",
-       "35731  YY1_2018__Guillemot 1  66  POINT (75.48022 12.19213)      Asia\n",
-       "35732  YY1_2018__Guillemot 1  67  POINT (75.48012 12.21315)      Asia\n",
-       "35733   YY1_2018__Guillemot 1  7  POINT (75.52462 12.26442)      Asia\n",
-       "35734   YY1_2018__Guillemot 1  8  POINT (75.52417 12.26392)      Asia\n",
-       "35735   YY1_2018__Guillemot 1  9  POINT (75.52428 12.26368)      Asia\n",
-       "\n",
-       "[35736 rows x 3 columns]"
+       "                  SSBS                   geometry UN_region\n",
+       "0  AD1_2001__Liow 1  1  POINT (103.77861 1.35194)      Asia\n",
+       "1  AD1_2001__Liow 1  2  POINT (103.80806 1.35472)      Asia\n",
+       "2  AD1_2001__Liow 1  3  POINT (103.81167 1.39472)      Asia\n",
+       "3  AD1_2001__Liow 1  4  POINT (103.78722 1.32694)      Asia\n",
+       "4  AD1_2001__Liow 1  5  POINT (103.80361 1.28278)      Asia\n",
+       "5  AD1_2001__Liow 2  1  POINT (103.77861 1.35194)      Asia\n",
+       "6  AD1_2001__Liow 2  2  POINT (103.80806 1.35472)      Asia\n",
+       "7  AD1_2001__Liow 2  3  POINT (103.81167 1.39472)      Asia\n",
+       "8  AD1_2001__Liow 2  4  POINT (103.78722 1.32694)      Asia\n",
+       "9  AD1_2001__Liow 2  5  POINT (103.80361 1.28278)      Asia"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf_sites"
+    "gdf_sites.head(10)"
    ]
   }
  ],
