notes on future TODOs in geoprocessing

--- a/notebooks/geodata_processing_v2.ipynb
+++ b/notebooks/geodata_processing_v2.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "### Local projection, buffering and global reprojection\n",
     "\n",
-    "- TODO: Could be made more efficient by storing transformer objects in a dictionary, but requires a different handling with the apply functions."
+    "- TODO: Could be made more efficient by storing transformer objects in a dictionary, but requires a different handling with the apply functions. Can probably work as a global variable."
    ]
   },
   {
@@ -585,7 +585,9 @@
    "id": "a9870252-00f7-4177-be88-5e0ac04a8095",
    "metadata": {},
    "source": [
-    "### Extraction of raster data based on polygons"
+    "### Extraction of raster data based on polygons\n",
+    "\n",
+    "- TODO: Separate non-overlapping and overlapping polygons. Process the first group using pygeoprocessing. See: https://stackoverflow.com/questions/47471872/find-non-overlapping-polygons-in-geodataframe"
    ]
   },
   {
@@ -1186,7 +1188,9 @@
    "id": "7f9bf87e-93c5-4321-b2ce-b9927613f45f",
    "metadata": {},
    "source": [
-    "### Calculation of road density inside polygons"
+    "### Calculation of road density inside polygons\n",
+    "\n",
+    "- TODO: Can this be sped up by splitting the road files into smaller chunks? Or by evaluating only a subset of road linestrings for each polygon?"
    ]
   },
   {
