hierarchical model implemented

--- a/notebooks/geodata_processing_v2.ipynb
+++ b/notebooks/geodata_processing_v2.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "### Local projection, buffering and global reprojection\n",
     "\n",
-    "- TODO: Could be made more efficient by storing transformer objects in a dictionary, but requires a different handling with the apply functions. Can probably work as a global variable."
+    "- TODO: Could be made more efficient by storing transformer objects in a dictionary, and doing a lookup for existing ones, but requires a different handling with the apply functions. Can probably work as a global variable."
    ]
   },
   {
@@ -977,7 +977,7 @@
    "outputs": [],
    "source": [
     "# Save the dataframe as a file\n",
-    "# df_pop_density = pd.DataFrame(gdf_pop_density.drop([\"global_coord\", \"UN_region\"]))\n",
+    "df_pop_density = pd.DataFrame(gdf_pop_density.drop([\"global_coord\", \"UN_region\"]))\n",
     "df_pop_density.to_parquet(\"../../data/GPW/output/pop_density.parquet\")"
    ]
   },
@@ -1750,336 +1750,6 @@
     "bioclim_path = \"../../data/WorldClim/Bioclimatic/wc2.1_30s_bio_1.tif\"\n",
     "pgp.get_raster_info(bioclim_path)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2c985c0-cbaa-41dc-9369-6429fb4e804b",
-   "metadata": {},
-   "source": [
-    "## Unused code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f23dd47-235e-49ae-9503-f333cd8ee975",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downscale_factor = 10  # Go from 1km to 10km\n",
-    "\n",
-    "with rasterio.open(\"../../data/GPW/gpw_v4_2000_30_sec.tif\") as dataset:\n",
-    "\n",
-    "    # Read dataset and specify output shape\n",
-    "    # Use the average population density of the pixels being aggregated\n",
-    "    data = dataset.read(\n",
-    "        out_shape=(\n",
-    "            dataset.count,\n",
-    "            int(dataset.height / downscale_factor),\n",
-    "            int(dataset.width / downscale_factor),\n",
-    "        ),\n",
-    "        resampling=Resampling.average,\n",
-    "    )\n",
-    "\n",
-    "    # Scale image transform\n",
-    "    transform = dataset.transform * dataset.transform.scale(\n",
-    "        (dataset.width / data.shape[-1]), (dataset.height / data.shape[-2])\n",
-    "    )\n",
-    "\n",
-    "    # Define the metadata for the new downsampled raster\n",
-    "    out_meta = dataset.meta.copy()\n",
-    "    out_meta.update(\n",
-    "        {\n",
-    "            \"driver\": \"GTiff\",\n",
-    "            \"height\": data.shape[1],\n",
-    "            \"width\": data.shape[2],\n",
-    "            \"transform\": transform,\n",
-    "        }\n",
-    "    )\n",
-    "\n",
-    "    # Write the downsampled raster to a new file\n",
-    "    with rasterio.open(\"../../data/GPW/gpw_v4_2000_10_km.tif\", \"w\", **out_meta) as dest:\n",
-    "        dest.write(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ceadfa9-2ef1-457e-9998-0911129eea8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = time.time()\n",
-    "\n",
-    "# Load the raster file\n",
-    "raster_data = rasterio.open(\"../../data/GPW/gpw_v4_2000_10_km.tif\")\n",
-    "\n",
-    "# Find the value used for nodata\n",
-    "nodata_value = raster_data.nodatavals[0]\n",
-    "\n",
-    "# Extract population density from the grids for each coordinate\n",
-    "pop_density = np.array(list(raster_data.sample(coord_list))).flatten()\n",
-    "\n",
-    "# Set density to np.nan if it seems to be a nodata pixel\n",
-    "if nodata_value is not None:\n",
-    "    pop_density[np.isclose(pop_density, nodata_value, equal_nan=True)] = np.nan\n",
-    "\n",
-    "# Append new column to the dataframe\n",
-    "gdf_sites_point = gdf_sites_point.copy()\n",
-    "gdf_sites_point[\"Pop_density_2000_10km\"] = pop_density\n",
-    "\n",
-    "end = time.time()\n",
-    "print(end - start)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62a29a4b-1d8a-40f2-9272-cb4f7783992c",
-   "metadata": {},
-   "source": [
-    "### Method 1: Rasterio sample\n",
-    "\n",
-    "Get data for the grid in which the coordinates fall. This can work for high resolution data, but might be inaccurate when downsampling the population density data and then matching pixels with the site coordinates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45375421-2841-47da-938b-8b91059b4c85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = time.time()\n",
-    "\n",
-    "# Load the raster file\n",
-    "raster_data = rasterio.open(\"../../data/GPW/gpw_v4_2000_30_sec.tif\")\n",
-    "\n",
-    "# Find the value used for nodata\n",
-    "nodata_value = raster_data.nodatavals[0]\n",
-    "\n",
-    "# Extract population density from the grids for each coordinate\n",
-    "pop_density = np.array(list(raster_data.sample(coord_list))).flatten()\n",
-    "\n",
-    "# Set density to np.nan if it seems to be a nodata pixel\n",
-    "if nodata_value is not None:\n",
-    "    pop_density[np.isclose(pop_density, nodata_value, equal_nan=True)] = np.nan\n",
-    "\n",
-    "# Append new column to the dataframe\n",
-    "gdf_sites_point = gdf_sites.copy()\n",
-    "gdf_sites_point[\"Pop_density_2000_1km\"] = pop_density\n",
-    "\n",
-    "end = time.time()\n",
-    "print(end - start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52d7d104-18fa-4e67-9c7d-1a20204fc965",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def project_to_utm(geometry):\n",
-    "    try:\n",
-    "        if isinstance(geometry, Point):\n",
-    "\n",
-    "            # Get the coordinate point values\n",
-    "            long, lat = geometry.x, geometry.y\n",
-    "\n",
-    "            # Determine the UTM zone and hemisphere\n",
-    "            zone_number = int((long + 180) // 6) + 1\n",
-    "            epsg_code = (\n",
-    "                f\"EPSG:{32700 + zone_number if lat < 0 else 32600 + zone_number}\"\n",
-    "            )\n",
-    "\n",
-    "            # Initialize Transformer object, and transform to UTM coordinates\n",
-    "            utm_transformer = Transformer.from_crs(\n",
-    "                \"EPSG:4326\", epsg_code, always_xy=True\n",
-    "            )\n",
-    "            utm_x, utm_y = utm_transformer.transform(long, lat)\n",
-    "            utm_coords = Point(utm_x, utm_y)\n",
-    "\n",
-    "            return utm_coords, epsg_code\n",
-    "\n",
-    "        elif isinstance(geometry, LineString):\n",
-    "            # Calculate EPSG code based on the first point's latitude and longitude\n",
-    "            first_point = geometry.coords[0]\n",
-    "            long, lat = first_point[0], first_point[1]\n",
-    "            zone_number = int((long + 180) // 6) + 1\n",
-    "            epsg_code = (\n",
-    "                f\"EPSG:{32700 + zone_number if lat < 0 else 32600 + zone_number}\"\n",
-    "            )\n",
-    "\n",
-    "            # Initialize Transformer object, and transform to UTM coordinates\n",
-    "            utm_transformer = Transformer.from_crs(\n",
-    "                \"EPSG:4326\", epsg_code, always_xy=True\n",
-    "            )\n",
-    "            transformed_points = [\n",
-    "                utm_transformer.transform(point[0], point[1])\n",
-    "                for point in geometry.coords\n",
-    "            ]\n",
-    "\n",
-    "            return LineString(transformed_points), epsg_code\n",
-    "\n",
-    "    except ValueError as e:\n",
-    "        print(e)\n",
-    "        print(geometry)\n",
-    "        return None, None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ab5fb1c-a6c5-4d38-b5b7-428cacc8ccb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def project_to_utm(gdf, geom_type):\n",
-    "\n",
-    "    # Make copy and specify geometry column\n",
-    "    gdf = gdf.copy().set_geometry(\"global_coord\")\n",
-    "\n",
-    "    if geom_type == \"Point\":\n",
-    "\n",
-    "        # Get longitudes and latitudes\n",
-    "        coord = gdf.get_coordinates()\n",
-    "        gdf[[\"long\", \"lat\"]] = coord[[\"x\", \"y\"]]\n",
-    "\n",
-    "        # Determine the UTM zone and hemisphere\n",
-    "        gdf[\"zone_number\"] = ((gdf[\"long\"] + 180) // 6 + 1).astype(int)\n",
-    "        gdf[\"epsg_code\"] = np.where(\n",
-    "            gdf[\"lat\"] < 0,\n",
-    "            32700 + gdf[\"zone_number\"],\n",
-    "            32600 + gdf[\"zone_number\"],\n",
-    "        ).astype(str)\n",
-    "\n",
-    "        # Perform projection and drop intermediary columns\n",
-    "        projected_geoms = []\n",
-    "        for index, row in gdf.iterrows():\n",
-    "            transformer = Transformer.from_crs(\n",
-    "                \"EPSG:4326\", row[\"epsg_code\"], always_xy=True\n",
-    "            )\n",
-    "            utm_x, utm_y = transformer.transform(\n",
-    "                row[\"global_coord\"].x, row[\"global_coord\"].y\n",
-    "            )\n",
-    "            projected_geoms.append(Point(utm_x, utm_y))\n",
-    "\n",
-    "        gdf[\"coord_utm\"] = gpd.GeoSeries(projected_geoms, index=gdf.index)\n",
-    "        gdf = gdf.drop([\"long\", \"lat\", \"zone_number\"], axis=\"columns\")\n",
-    "\n",
-    "        return gdf\n",
-    "\n",
-    "    elif geom_type == \"LineString\":\n",
-    "\n",
-    "        # Calculate EPSG code based on the first point's latitude and longitude\n",
-    "        gdf[\"first_point\"] = gdf.apply(lambda row: row[\"global_coord\"].coords[0])\n",
-    "        coord = gdf.get_coordinates()\n",
-    "        gdf[[\"long\", \"lat\"]] = coord[[\"x\", \"y\"]]\n",
-    "\n",
-    "        # Determine the UTM zone and hemisphere\n",
-    "        gdf[\"zone_number\"] = ((gdf[\"long\"] + 180) // 6 + 1).astype(int)\n",
-    "        gdf[\"epsg_code\"] = np.where(\n",
-    "            gdf[\"lat\"] < 0,\n",
-    "            32700 + gdf[\"zone_number\"],\n",
-    "            32600 + gdf[\"zone_number\"],\n",
-    "        ).astype(str)\n",
-    "\n",
-    "        # Perform projection and drop intermediary columns\n",
-    "        projected_geoms = []\n",
-    "        for index, row in gdf.iterrows():\n",
-    "            transformer = Transformer.from_crs(\n",
-    "                \"EPSG:4326\", row[\"epsg_code\"], always_xy=True\n",
-    "            )\n",
-    "            utm_x, utm_y = transformer.transform(\n",
-    "                row[\"global_coord\"].x, row[\"global_coord\"].y\n",
-    "            )\n",
-    "            projected_geoms.append(Point(utm_x, utm_y))\n",
-    "        \n",
-    "        transformed_points = [\n",
-    "                utm_transformer.transform(point[0], point[1])\n",
-    "                for point in geometry.coords\n",
-    "            ]\n",
-    "        gdf = gdf.drop([\"long\", \"lat\", \"zone_number\"], axis=\"columns\")\n",
-    "\n",
-    "        return gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86f9971e-9590-434c-bcbf-8fdf111eb503",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def intersect_sites_and_roads(gdf_sites, gdf_roads, buffer_dist):\n",
-    "\n",
-    "    gdf_sites = gdf_sites.copy()\n",
-    "\n",
-    "    # Create list of road linestrings\n",
-    "    road_linestrings = gdf_roads[\"utm_coord\"]\n",
-    "\n",
-    "    # Iterate through each buffer radius column in the site dataframe\n",
-    "    for dist in buffer_dist:\n",
-    "        site_road_len = []\n",
-    "\n",
-    "        # Iterate through every site polygon of this size\n",
-    "        for site_polygon in gdf_sites[f\"utm_{dist}km\"]:\n",
-    "            total_len = 0\n",
-    "\n",
-    "            # Calculate intersection between site polygon and all road linestrings\n",
-    "            for segment in road_linestrings:\n",
-    "                intersection = shapely.intersection(site_polygon, segment)\n",
-    "                if not intersection.is_empty:\n",
-    "                    total_len += intersection.length\n",
-    "\n",
-    "            site_road_len.append(total_len)\n",
-    "\n",
-    "        gdf_sites[f\"Road_density_{dist}km\"] = site_road_len\n",
-    "\n",
-    "    return gdf_sites"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f915fb9-e475-4c54-96b5-b32e0843d65e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_raster_stats_pgp(polygon_path, raster_path):\n",
-    "\n",
-    "    # Calculate zonal statistics\n",
-    "    stats = pgp.geoprocessing.zonal_statistics(\n",
-    "        base_raster_path_band=(raster_path, 1),\n",
-    "        aggregate_vector_path=polygon_path,\n",
-    "        polygons_might_overlap=False,\n",
-    "    )\n",
-    "\n",
-    "    # Open our vector dataset and get the layer of the vector\n",
-    "    vector = gdal.OpenEx(polygon_path, gdal.OF_VECTOR)\n",
-    "    layer = vector.GetLayer()\n",
-    "\n",
-    "    # Iterate over each polygon feature in the vector and get FID\n",
-    "    fid_list = []\n",
-    "    for feature in layer:\n",
-    "        fid_list.append(feature.GetFID())\n",
-    "\n",
-    "    stats_list = list(stats.keys())\n",
-    "    if fid_list == stats_list:\n",
-    "        print(\"The FID and stats dict keys are equal\")\n",
-    "    else:\n",
-    "        print(\"The FID and stats dict keys are NOT equal\")\n",
-    "\n",
-    "    # Extract stats from each nested dictionary in the output\n",
-    "    result = []\n",
-    "    for fid in fid_list:\n",
-    "        try:\n",
-    "            result.append(stats[fid][\"sum\"] / stats[fid][\"count\"])\n",
-    "        except ZeroDivisionError:\n",
-    "            result.append(0)\n",
-    "\n",
-    "    return result"
-   ]
   }
  ],
  "metadata": {
@@ -2098,7 +1768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
