--- a/notebooks/predicts_processing.ipynb
+++ b/notebooks/predicts_processing.ipynb
@@ -5,7 +5,9 @@
    "id": "d1ed2fca-76a7-4de3-8f49-d55c28e1a720",
    "metadata": {},
    "source": [
-    "# Bayesian biodiversity: PREDICTS data processing"
+    "# Bayesian biodiversity: PREDICTS data processing\n",
+    "\n",
+    "TODO: Change from pandas to polars"
    ]
   },
   {
@@ -1250,7 +1252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
